<resources>
    <string name="app_name">Navegation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listado">LISTADO</string>
    <string name="recetas">RECETAS</string>
    <string name="guion">-</string>
    <string name="nombre">Nombre</string>
    <string name="informaci_n">Información:</string>
    <string name="definir_informacion">Definir Informacion</string>
    <string name="definir_ingredientes">Definir Ingredientes</string>
    <string name="elaboraci_n">Elaboración:</string>
    <string name="definir_elaboraci_n">Definir Elaboración</string>
    <string name="simb">~</string>
    <string name="users">Usuarios\n</string>
    <string name="nameUser">Nombre Completo</string>
    <string name="userNameUser">Nombre de usuario</string>
    <string name="email">Email de usuario</string>
    <string name="idUser">Id de Usuario</string>
    <string name="phone">Teléfono de Usuario</string>
    <string name="definir_phone">Definir Phone</string>
    <string name="website">Web de usuario</string>
    <string name="definir_website">Definir website</string>
    <string name="address">Direccion de Usuario</string>
    <string name="company">Company de Usuario</string>
    <string name="albumName">Nombre de Album</string>
</resources>