<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_details"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.UserDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:background="@color/teal_200">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guion"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guion"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/userNameUser"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_ingredientes" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/idUser"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        android:fontFamily="sans-serif"
                        android:text="@string/definir_informacion" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/email"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_elaboraci_n" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/phone"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_phone" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/website"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_website" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/address"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_website" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_user_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/company"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/user_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_website" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>