<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_details"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecetaDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:background="@color/teal_200">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guion"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recetas1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guion"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_infoReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/informaci_n"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/infoReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        android:fontFamily="sans-serif"
                        android:text="@string/definir_informacion" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_ingredienteReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="Ingredientes: "
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/ingredienteReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_ingredientes" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_elaboracionReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:fontFamily="serif"
                        android:text="@string/elaboraci_n"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/elaboracionReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:textSize="20sp"
                        android:text="@string/definir_elaboraci_n" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagenReceta"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="center"
                       />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>